JBCefJSQuery: fix synchronization
GitOrigin-RevId: a0ab811935f8932cf9dbe9dc11fd17adbda81ff1